// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel Plugin Transform Classnames does not transform dynamic class name without hyphen 1`] = `
"\\"use strict\\";

/*#__PURE__*/React.createElement(\\"div\\", {
  className: dynamicClassName
});"
`;

exports[`Babel Plugin Transform Classnames leaves other JSX attributes unchanged 1`] = `
"\\"use strict\\";

/*#__PURE__*/React.createElement(\\"div\\", {
  id: \\"myDiv\\",
  \\"data-custom\\": \\"value\\"
});"
`;

exports[`Babel Plugin Transform Classnames transforms CSS file import 1`] = `
"\\"use strict\\";

require(\\"./styles.module.css\\");"
`;

exports[`Babel Plugin Transform Classnames transforms dynamic class name with hyphen 1`] = `
"\\"use strict\\";

/*#__PURE__*/React.createElement(\\"div\\", {
  className: dynamicClassName
});"
`;

exports[`Babel Plugin Transform Classnames transforms simple static class name 1`] = `
"\\"use strict\\";

/*#__PURE__*/React.createElement(\\"div\\", {
  className: \\"example\\"
});"
`;
